2012-03-20  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* release 0.7.0.

	- CMake build system now builds and installs all the command-line
	programs and MEX files in the project. Some had been forgotten,
	after I compiled them by hand from Matlab. But now, everything can
	be compiled from the root CMakeLists.txt.

	- Compilation and build tested for

		Linux 64 bit, gcc 4.6.1, CMake 2.8, ITK 3.20.1,
		Matlab R2011b, Boost 1.46

		Windows 32 bit, Visual Studio 9 (2008), CMake 2.8,
		ITK 3.20.1, Matlab R2008a, Boost 1.47

	* matlab/ThirdPartyToolbox/dijkstra.cpp:

	- Resolve some warnings removing unused variables.

	* matlab/PointsToolbox/CMakeLists.txt (v0.1.1):

	- Fix bug. In Windows, we need to specify where the Boost include
	directory is.

	* cpp/src/third-party/mba/CMakeLists.txt (v0.1.1):

	- Fix bug. In Windows, build fails if INSTALL specifies
	LIBRARY. Removing the word LIBRARY solved the problem.

	- Fix bug. In Windows, we need to specify where the Boost include
	directory is.

	- Fix bug. In Windows, we need to build the static as well as the
	dynamic MBA library. Otherwise, mba_surface_interpolation() cannot
	link to it.

	* CMakeLists.txt (v0.1.1):
	* cpp/src/CMakeLists.txt (v0.1.2):

	- Hide some warnings given by MSVC compiler.

	- Move search for ITK and Boost to the root directory, so that
	they are available for the cpp and matlab projects.

	* cpp/src/CMakeLists.txt (v0.1.1):

	- Add subdirectory third-party/mba to the build system.

	* matlab/CMakeLists.txt (v0.1.1):

	- Add subdirectories ThirdPartyToolbox and PointsToolbox to the
	build system.

	* Add cpp/src/third-party/mba/CMakeLists.txt (v0.1.0):

	- Hide some warnings given by MSVC compiler.

	- This directory was not part of the cmake build system. Now the
	MBA library is built and installed in
	cpp/src/third-party/mba/lib. This library is linked to by the MEX
	function mba_surface_interpolation().

	* Add matlab/PointsToolbox/CMakeLists.txt (v0.1.0):